--- a/src/index.scss
+++ b/src/index.scss
@@ -12,5 +12,6 @@ code {
     monospace;
 }
 
+@import "./styles/base-style.scss";
 @import "./styles/SearchBar.scss";
 @import "./styles/SearchList.scss";
