--- a/src/styles/SearchList.scss
+++ b/src/styles/SearchList.scss
@@ -1,16 +1,27 @@
 .SearchList {
   max-height: 500px;
   overflow: auto;
+
+  mark {
+    background-color: $transparent;
+    color: blue;
+  }
+
+  .HightlightedCard {
+    background-color: antiquewhite;
+    cursor: pointer;
+  }
 }
 
+// overriding scrollbar css
 ::-webkit-scrollbar {
   width: 0.4rem;
 }
 
 ::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: inset 0 0 6px $scrollbarshadow;
 }
 
 ::-webkit-scrollbar-thumb {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: inset 0 0 6px $scrollbarthumb;
 }
